import net.fabricmc.loom.task.FabricModJsonV1Task

plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}


base {
	archivesName = project.archives_base_name
}

loom {
	// we should use blaze3d for our graphics.
	runtimeOnlyLwjglGraphics = true
	splitEnvironmentSourceSets()
	runtimeOnlyLog4j = true
	accessWidenerPath = file("src/main/resources/breakingfemme.classtweaker")
	runConfigs.configureEach {
		preferGradleTask = true
	}
	interfaceInjection {
		enableDependencyInterfaceInjection = true
		enableModProvidedJavadoc = true
	}
	mods {
		"breakingfemme" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.

	//Patchouli for instruction book
	maven { url 'https://maven.blamejared.com' }

	//REI for... REI compatibility
    maven { url "https://maven.shedaniel.me" }

	//create stuff
	maven { url "https://mvn.devos.one/snapshots/" }
	maven { url "https://mvn.devos.one/releases/" }
	maven { url "https://maven.createmod.net/" }
	maven { url "https://raw.githubusercontent.com/Fuzss/modresources/main/maven" }
	maven { url "https://maven.jamieswhiteshirt.com/libs-release/" }
	maven {
		name = "Terraformers"
		url = "https://maven.terraformersmc.com/"
	}
	maven {
		url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1"
		description = "DevAuth"
	}
}
def generateDataModJson = tasks.register("generateDataModJson", FabricModJsonV1Task) {
	outputFile = new File(temporaryDir, "fabric.mod.json")
	json {
		name = "Breaking Femme Datagen"
		modId = "breakingfemme-data"
		version = project.version
		environment = "*"
		entrypoint("fabric-datagen", "com.breakingfemme.datagen.BreakingFemmeDataGenerator")
		it.depends("breakingfemme") {
			it.versionRequirements = ["*"]

		}
	}
}

fabricApi {
	configureDataGeneration {
		client = true

		modId = "breakingfemme-data"

		createSourceSet = true
	}

	tasks.named("processDatagenResources", ProcessResources) {

		from(generateDataModJson.flatMap { it.outputFile })
	}
}
dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"

	mappings loom.layered() {
		mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
		//mappings file("mojmap_compat_fix.tiny") //if this is fucked up its just gonna error "failed to apply layered mappings" like wtf???
	}

	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	//Patchouli for instruction book
	//modApi "vazkii.patchouli:Patchouli:1.20.1-85-FABRIC" //i can access its classes (wait why does this not work)
	//include "vazkii.patchouli:Patchouli:1.20.1-85-FABRIC" //its actually in the final build
	modImplementation "vazkii.patchouli:Patchouli:1.20.1-85-FABRIC" //if i cant mixin im staying with this.
	//also, this is not jar-in-jar. cuz this mod is used in other mods as well
	//but if we want to use jar-in-jar, use include or modInclude

	//REI: available versions here https://maven.shedaniel.me/me/shedaniel/RoughlyEnoughItems-api-fabric/
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-api-fabric:12.1.785" //latest of version 12, hope its gonna be fine if users just install random versions of rei...

	//https://github.com/Fabricators-of-Create/create-fabric-addon-template/blob/1.20.1/build.gradle
	// Create - dependencies are added transitively
	modCompileOnly "com.simibubi.create:create-fabric:6.0.8.1+build.1744-mc1.20.1"
	modCompileOnlyApi "com.terraformersmc:modmenu:${project.modmenu_version}"
	// modmenu so we can see what our mod will display as if the user has modmenu installed
	if (project.modmenu_enabled) {
		modLocalRuntime "com.terraformersmc:modmenu:${project.modmenu_version}"
	}
	// devauth only for development
	modLocalRuntime "me.djtheredstoner:DevAuth-fabric:1.2.2"
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName" }
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}